# tianbar

./: .dockerignore  .editorconfig  .gitignore  .jshintignore  .jshintrc  .travis.yml  Dockerfile  Dockerfile.base  LICENSE  Paths_tianbar.hs  README.md  build_base_image  circle.yml  index.html  stack-base.yaml  stack.yaml  tianbar.cabal
screenshot-test/: dump-window  test
screenshot-test/config/tianbar/: index.html
scripts/: command.js  dbus.js  ibus.js  location_shim.js  network.js  power.js  socket.js  tianbar.js  time.js  volume.js  weather.js  xmonad.js
src/: Main.hs  gdk_property_change_wrapper.c
src/GI/: Extras.hs  Signals.hs
src/System/: Tianbar.hs
src/System/Tianbar/: Callbacks.hs  Configuration.hs  DBus.hs  Plugin.hs  RequestResponse.hs  Server.hs  Socket.hs  StrutProperties.hs  Systray.hs  UriOverride.hs  Utils.hs  WebKit.hs  XMonadLog.hs
src/System/Tianbar/DBus/: JSON.hs
src/System/Tianbar/Plugin/: All.hs  Basic.hs  Combined.hs  DBus.hs  DataDirectory.hs  ExecuteCommand.hs  FileSystem.hs  GSettings.hs  Socket.hs
src/System/Tianbar/Plugin/DBus/: FromData.hs  JSON.hs  Utils.hs
tests/: TestMain.hs
tests/TestPlugin/DBus/: Serialization.hs
