name:                tianbar
version:             0.3.1.0
synopsis:            A desktop bar based on WebKit
description:
  A desktop bar using WebKit for rendering as much as possible.
  Based on Taffybar.
homepage:            https://github.com/koterpillar/tianbar
license:             MIT
license-file:        LICENSE
author:              Alexey Kotlyarov
maintainer:          a@koterpillar.com
category:            System
build-type:          Simple
cabal-version:       >=1.10
data-files:          README.md
                   , scripts/location_shim.js
                   , scripts/dbus.js
                   , scripts/time.js
                   , scripts/weather.js
                   , scripts/xmonad.js

executable tianbar
  default-language:    Haskell2010
  build-depends:       base >3 && <5
                     , aeson ==0.6.*
                     , containers ==0.5.*
                     , dbus ==0.10.*
                     , gtk ==0.12.*
                     , gtk-traymanager ==0.1.*
                     , MissingH ==1.2.*
                     , network ==2.4.*
                     , process ==1.1.*
                     , split ==0.2.*
                     , text ==0.11.*
                     , webkit ==0.12.*
                     , xdg-basedir ==0.2.*
  pkgconfig-depends:   gtk+-2.0
  hs-source-dirs:      src
  main-is:             Main.hs
  other-modules:       System.Tianbar
                     , System.Tianbar.Configuration
                     , System.Tianbar.StrutProperties
                     , System.Tianbar.Systray
                     , System.Tianbar.WebKit
  c-sources:           src/gdk_property_change_wrapper.c
  ghc-options:         -Wall -rtsopts -threaded
  ghc-prof-options:    -auto-all

library
  default-language:    Haskell2010
  build-depends:       base >3 && <5
                     , dbus ==0.10.*
                     , xmonad
                     , xmonad-contrib
                     , utf8-string ==0.3.*
                     , blaze-html >=0.5 && <0.8
                     , blaze-markup >=0.5 && <0.7
  hs-source-dirs:      src
  exposed-modules:     System.Tianbar.XMonadLog
  ghc-options: -Wall -rtsopts
  ghc-prof-options: -auto-all

source-repository head
  type:                git
  location:            git://github.com/koterpillar/tianbar.git
