name:                tianbar
version:             1.1.1.1
synopsis:            A desktop bar based on WebKit
description:
  A desktop bar using WebKit for rendering as much as possible.
  Based on Taffybar.
homepage:            https://github.com/koterpillar/tianbar
license:             MIT
license-file:        LICENSE
author:              Alexey Kotlyarov
maintainer:          a@koterpillar.com
category:            System
build-type:          Simple
cabal-version:       >=1.10
data-files:          README.md
                   , index.html
                   , scripts/dbus.js
                   , scripts/ibus.js
                   , scripts/network.js
                   , scripts/power.js
                   , scripts/socket.js
                   , scripts/tianbar.js
                   , scripts/time.js
                   , scripts/vendor/jquery.js
                   , scripts/vendor/moment.js
                   , scripts/vendor/require.js
                   , scripts/volume.js
                   , scripts/weather.js
                   , scripts/xmonad.js

executable tianbar
  default-language:    Haskell2010
  build-depends:       base >3 && <5
                     , aeson
                     , bytestring
                     , containers
                     , directory
                     , dbus
                     , filepath
                     , haskell-gi-base
                     , http-types
                     , gi-gdk
                     , gi-gio
                     , gi-glib
                     , gi-gtk
                     , gi-webkit2
                     , lens
                     , mime-types
                     , mtl
                     , network
                     , process
                     , random
                     , split
                     , text
                     , transformers
                     , utf8-string
                     , xdg-basedir
  pkgconfig-depends:   gtk+-3.0
  hs-source-dirs:      src
  main-is:             Main.hs
  other-modules:       System.Tianbar
                     , System.Tianbar.Callbacks
                     , System.Tianbar.Configuration
                     , System.Tianbar.Server
                     , System.Tianbar.StrutProperties
                     , System.Tianbar.Plugin
                     , System.Tianbar.Plugin.All
                     , System.Tianbar.Plugin.Combined
                     , System.Tianbar.Plugin.FileSystem
                     , System.Tianbar.Plugin.ExecuteCommand
                     , System.Tianbar.Plugin.DBus
                     , System.Tianbar.Plugin.DBus.FromData
                     , System.Tianbar.Plugin.DBus.JSON
                     , System.Tianbar.Plugin.GSettings
                     , System.Tianbar.Plugin.Socket
                     , System.Tianbar.RequestResponse
                     , System.Tianbar.WebKit
  ghc-options:         -Wall -rtsopts -threaded

library
  default-language:    Haskell2010
  build-depends:       base >3 && <5
                     , dbus
                     , xmonad
                     , xmonad-contrib
                     , utf8-string
                     , blaze-html
                     , blaze-markup
  hs-source-dirs:      src
  exposed-modules:     System.Tianbar.XMonadLog
  ghc-options:         -Wall

source-repository head
  type:                git
  location:            git://github.com/koterpillar/tianbar.git
